# fastapi-project

./: .pre-commit-config.yaml  README.md
api/: pyproject.toml
